--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -6,7 +6,8 @@
 
 #root {
   display: flex;
-  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
 .App {
@@ -20,6 +21,10 @@
   margin-top: 15px;
   justify-content: space-between;
   align-items: center;
+}
+
+.post__btns {
+  display: flex;
 }
 
 .post-enter {
@@ -51,4 +56,17 @@
 .page__current {
   border: 2px solid orange;
   font-weight: bold;
+}
+
+.navbar {
+  height: 50px;
+  width: 100vw;
+  display: flex;
+  align-items: center;
+  padding: 0 15px;
+  background-color: lightgray;
+}
+
+.navbar {
+  margin-left: auto;
 }
